# tklib

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_text.py
tklib/: __init__.py
tklib/helpers/: text.py
