[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tklib"
author = "Thomas KUOCH"
author-email = "thomas@lajavaness.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["pandas", "numpy"]
requires-python = ">=3.7"
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = ["pytest"]
dev = ["mypy", "pylint", "black", "isort"]

[tool.coverage.run]
omit = ["tests"]

[tool.pytest.ini_options]
markers = ["slow: Mark test as slow", "issue: Mark issue number"]
